--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "GPL-2.0-only",
   "devDependencies": {
+    "@snowpack/plugin-sass": "^1.4.0",
     "@types/wicg-file-system-access": "^2020.9.2",
     "@vaadin/router": "^1.7.4",
     "exifr": "^7.1.3",
