--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "esnext",
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "target": "ES2021",
     "lib": ["ES2021", "DOM", "DOM.Iterable", "ESNext.Array"],
     "moduleResolution": "Node"
